--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -33,7 +33,7 @@
        timeline : true,
        animation : false,
        homeButton: true,
-       vrButton: fales,
+       vrButton: false,
        geocoder: true,
        sceneModePicker: false,
        navigationHelpButton: true
