--- a/Apps/HelloWorld3.html
+++ b/Apps/HelloWorld3.html
@@ -29,7 +29,7 @@
     <div id="cesiumContainer"></div>
     <script>
       const viewer = new Cesium.Viewer("cesiumContainer");
-      var polygon = vierer.entities.add({
+      var polygon = viewer.entities.add({
           name:"東京都庁",
           description:"ここは東京都庁です。",
           polygon : {
@@ -38,13 +38,13 @@
                   139.69143377086, 35.68993508559, 0,
                   139.69184361318, 35.68999687609, 0,
                   139.69203616751, 35.68909180654, 0]),
-              heihghtReference: Cesium.HeightRefence.RELATIVE_TO_GROUND,
-              extrudedHeight: 200.0
+              heightReference: Cesium.HeightReference.RELATIVE_TO_GROUND,
+              extrudedHeight: 200.0,
               extrudedHeightReference: Cesium.HeightReference.RELATIVE_TO_GROUND,
               material : Cesium.Color.RED.withAlpha(0.5),
-              outline : true.
-              outlineColor : Cesium.Color.BLACK
-          }
+              outline : true,
+              outlineColor : Cesium.Color.BLACK,
+          },
       });
       viewer.camera.flyTo({
           destination: Cesium.Cartesian3.fromDegrees(139.691734969185, 35.689513446065, 1000.0),
