--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Use correct character set. -->
     <meta charset="utf-8" />
-    <!-- Tell IE to use the latest, best version. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
@@ -28,16 +25,16 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-     var viewer = new Cesium.Viewer(”cesiumContainer”, {
-       baseLayerPicker: true,
-       timeline : true,
-       animation : false,
-       homeButton: true,
-       vrButton: false,
-       geocoder: true,
-       sceneModePicker: false,
-       navigationHelpButton: true
-     });
+      var viewer = new Cesium.Viewer("cesiumContainer", {
+        baseLayerPicker: true,
+        timeline: true,
+        animation: false,
+        homeButton: true,
+        vrButton: false,
+        geocoder: true,
+        sceneModePicker: false,
+        navigationHelpButton: true,
+      });
     </script>
   </body>
 </html>
