--- a/Apps/HelloWorld9.html
+++ b/Apps/HelloWorld9.html
@@ -68,7 +68,12 @@
                   outlineColor : Cesium.Color.BLACK,
               },
           });
-
+          viewer.entities.add({
+              position : Cesium.Cartesian3.fromDegrees(138.7311, 35.3629, 4000),
+              label: {
+                  text: "富士山",
+              }
+          });
           var label = viewer.entities.add({
               position : Cesium.Cartesian3.fromDegrees(139.6917, 35.6895, 250),
               label: {
@@ -89,7 +94,10 @@
                   roll : 0.0
               }
           });
-      });
+        } catch (error){
+          console.log('Failed to load tileset: &{error}');
+        }
+      })();
     </script>
   </body>
 </html>
