--- a/Apps/chino_3dtiles3.html
+++ b/Apps/chino_3dtiles3.html
@@ -34,32 +34,33 @@
             terrainProvider: await Cesium.createWorldTerrainAsync(),
           });
 
-          // OpenStreetMapをベースレイヤーとして正しく追加
           viewer.imageryLayers.addImageryProvider(
             new Cesium.OpenStreetMapImageryProvider({
               url: "https://a.tile.openstreetmap.org",
             })
           );
     
-          // 3Dタイルセットを読み込む
           const tileset = await Cesium.Cesium3DTileset.fromUrl('./sample/chino/tileset.json');
           viewer.scene.primitives.add(tileset);
 
-          // スクリプト①の内容を反映し、地上階数に応じて色を付ける
           tileset.style = new Cesium.Cesium3DTileStyle({
             color: {
               conditions: [
-                ["Number(${地上階数}) >= 4", "rgba(255, 0, 0, 0.5)"],  // 4階以上は赤
-                ["Number(${地上階数}) >= 3", "rgba(0, 255, 0, 0.5)"],  // 3階は緑
-                ["Number(${地上階数}) >= 2", "rgba(0, 0, 255, 0.5)"],  // 2階は青
-                ["true", "rgba(255, 255, 255, 0.5)"],  // それ以外は白
+                ["Number(${地上階数}) >= 4", "rgba(255, 0, 0, 0.5)"],
+                ["Number(${地上階数}) >= 3", "rgba(0, 255, 0, 0.5)"],
+                ["Number(${地上階数}) >= 2", "rgba(0, 0, 255, 0.5)"],
+                ["true", "rgba(255, 255, 255, 0.5)"],
               ],
             },
           });
-
-          // カメラをタイルセットにズームする
-          viewer.zoomTo(tileset);
-    
+          viewer.camera.flyTo({
+            destination: Cesium.Cartesian3.fromDegrees(138.2, 35.90, 10000),
+            orientation : {
+              heading : Cesium.Math.toRadians(0.0),
+              pitch : Cesium.Math.toRadians(-45.0),
+              roll : 0.0
+            }
+          });
         } catch (error) {
           console.log(`Failed to load tileset: ${error}`);
         }
