--- a/Apps/HelloWorld9.html
+++ b/Apps/HelloWorld9.html
@@ -95,7 +95,7 @@
               }
           });
         } catch (error){
-          console.log('Failed to load tileset: &{error}');
+          console.log('Failed to load tileset: ${error}');
         }
       })();
     </script>
